--- a/AttilaStarkeniusSolution/AttilaStarkeniusSolution.csproj
+++ b/AttilaStarkeniusSolution/AttilaStarkeniusSolution.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IronOcr.Languages.Thai" Version="4.4.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.17" />
   </ItemGroup>
 
