--- a/MvcMovie/appsettings.json
+++ b/MvcMovie/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MvcMovieContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext-65efa768-2139-4ad1-86a6-2eefdc0f27cc;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
